
Changes since milestone-0-1:

* Profile events are now split into logical "groups". A "group"
  is a bunch of functions that all need to be overriden together
  to add some new functionality. This logical grouping may
  become enforced in code at some later time (it will make
  it easier for users to build configurations). Currently
  the groupings we have are:
  profile events, socket events, reporting events, and
  verification events.

* Added delay support for urllist. A urllist entry can now be
  given a delay (in seconds) that happens each time that URL
  is used in a request. [Justin Erenkrantz]

* Changed "simple" and "easy" reporting systems to both print
  out the URL for each request. [Aaron Bannert]

* Now using strncasecmp() instead of strncmp() to compare XML
  identifiers. [Aaron Bannert]

* There is now limited support for Cookies in a Round Robin profile.
  [Justin Erenkrantz]

* A Farm can consist of multiple Farmers now, instead of being
  restricted to a single Farmer named "Joe". (This is only correct
  if you have thread support on your system.) [Aaron Bannert]

* Limited support for Farms has been implemented. There can
  be one Farm named "Bingo". [Aaron Bannert]
